# Wedding-AI-RAG-Assistant

./: README.md  pyproject.toml  requirements.txt
app/: config.py  main.py  models.py
app/memory/: session_memory.py
app/rag/: ingest.py  prompt.py  retriever.py  vectorstore.py
app/services/: image_service.py
app/utils/: image_handler.py
data/: image_url.json
data/common/: common_data.json
data/ladkewale/: ladkewale_data.json
data/ladkiwale/: ladkiwale_data.json
