[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "langchain-openai>=1.1.12",
    "openai>=2.31.0",
    "pinecone>=8.1.2",
    "python-dotenv>=1.2.2",
    "pytz>=2026.1.post1",
    "uvicorn>=0.44.0",
]
